test/parse/relaxed/bad/eofinbodycomment.cnf
p cnf 1 1
comment working
1comment
0comment with EOF